--- a/.github/workflows/frontend.yaml
+++ b/.github/workflows/frontend.yaml
@@ -29,9 +29,10 @@ jobs:
           node-version: '18.x'
 
       - name: npm install, build and test
-        run: npm ci
-        run: npm run build --if-present
-        run: npm test
+        run: |
+          npm ci
+          npm run build --if-present
+          npm test
 
       - name: Archive production artifacts
         uses: actions/upload-artifact@v3
