--- a/.github/workflows/frontend.yaml
+++ b/.github/workflows/frontend.yaml
@@ -37,7 +37,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: dist
-          path: dist
+          path: frontend/dist
             
       - name: Archive code coverage results
         uses: actions/upload-artifact@v3
