--- a/.github/workflows/frontend.yaml
+++ b/.github/workflows/frontend.yaml
@@ -56,7 +56,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: dist
-          path: dist
+          path: frontend/dist
 
       - name: checkout repository
         uses: actions/checkout@v3
@@ -68,4 +68,4 @@ jobs:
           aws-region: ap-northeast-1
       
       - name: deployment artifact
-        run: aws s3 sync . s3://vuejs-on-s3-prod-static-bucket-rc6lki --exact-timestamps --region ap-northeast-1
+        run: aws s3 sync dist/* s3://vuejs-on-s3-prod-static-bucket-rc6lki --exact-timestamps --region ap-northeast-1
