--- a/.github/workflows/frontend.yaml
+++ b/.github/workflows/frontend.yaml
@@ -49,7 +49,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: dist
-          path: /var/tmp
+          path: ./dist
 
       - name: checkout repository
         uses: actions/checkout@v3
@@ -61,4 +61,4 @@ jobs:
           aws-region: ap-northeast-1
       
       - name: deployment artifact
-        run: aws s3 sync /var/tmp/ s3://vuejs-on-s3-prod-static-bucket-rc6lki --exact-timestamps --region ap-northeast-1
+        run: aws s3 sync ./dist s3://vuejs-on-s3-prod-static-bucket-rc6lki --exact-timestamps --region ap-northeast-1
