--- a/.github/workflows/frontend.yaml
+++ b/.github/workflows/frontend.yaml
@@ -61,4 +61,4 @@ jobs:
           aws-region: ap-northeast-1
       
       - name: deployment artifact
-        run: aws s3 sync ./frontend/dist/ s3://vuejs-on-s3-prod-static-bucket-rc6lki --exact-timestamps --region ap-northeast-1
+        run: aws s3 sync . s3://vuejs-on-s3-prod-static-bucket-rc6lki --exact-timestamps --region ap-northeast-1
